--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
     <title>Kitchen Display System</title>
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+    html, body {
+      font-family: 'Roboto Condensed', sans-serif;
+    }
+
+    #app {
+      font-family: 'Roboto Condensed', sans-serif;
+    }
+    </style>
   </head>
-  <body>
+  <body style="background-color: #333333">
     <div id="app"></div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
